# godot_boids

./: .gitattributes  .gitignore  LICENSE.txt  README.md  export_presets.cfg  justfile  justfile.nu  project.godot
addons/boid_2d/: boid.gd  boid.tscn  boid_2d.gd  boid_2d.svg.import  plugin.cfg
addons/boids/: boid_manager.gd  boids.gd  boids.gdextension  grid.gd  plugin.cfg  process_boids.tscn
addons/boids/boid_2d/: boid_2d.gd  boid_2d.svg.import
addons/boids/boid_3d/: boid_3d.gd  boid_3d.svg.import
addons/boids/boid_properties/: boid_properties.gd  boid_properties.svg.import
addons/boids/defaults/: 2d_boid_properties.tres  2d_flock_properties.tres  3d_boid_properties.tres  3d_flock_properties.tres
addons/boids/flock/: flock.gd  flock.svg.import
addons/boids/resources/: boid_2d.svg.import  boid_3d.svg.import  boid_properties.svg.import  flock_2d.svg.import  flock_3d.svg.import  flock_properties.svg.import
addons/debug_camera/: LICENSE.txt.uid
addons/debug_camera/scripts/: DebugCamAutoload.gd  DebugCamAutoload.gd.uid  DebugCamera2D.gd  DebugCamera2D.gd.uid  DebugCamera3D.gd  DebugCamera3D.gd.uid  plugin.gd.uid
examples/boid_2d/: example_boid.svg.import  example_boid.tscn
examples/boid_2d/follow/: example.gd  example.tscn
examples/boid_2d/simple/: example.gd  example.tscn
examples/boids/2d/: example_boid.svg.import  example_boid.tscn
examples/boids/3d/: example_boid.blend  example_boid.tscn  (+1 more)
resources/: boid_2d.png.import
rust/: Cargo.toml  build-debug.sh  build.sh  package-release.sh  rust-toolchain.toml
rust/.cargo/: config.toml
rust/src/: boid_properties.rs  flock_properties.rs  lib.rs
rust/src/boid/: boid_2d.rs  boid_3d.rs  boid_properties.rs  mod.rs
rust/src/flock/: flock_2d.rs  flock_3d.rs  flock_properties.rs  mod.rs
(+6 files in other folders)
