[package]
name = "boids"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
stats = []

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["api-4-3", "experimental-threads"] }
glam = { version = "0.28", features = ["fast-math"] }
rayon = { version = "1.10" }
rustc-hash = "2"
indexmap = "2.4.0"

[profile.dev]
opt-level = 3