[package]
name = "boids"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
stats = []

[dependencies]
godot = { version = "0.2", features = ["api-4-3", "register-docs"] }
glam = { version = "0.28", features = ["fast-math"] }
rayon = { version = "1.10" }
rustc-hash = "2"
indexmap = "2.4.0"

[target.wasm32-unknown-emscripten.dependencies]
godot = { version = "0.2", features = ["api-4-3", "register-docs", "experimental-wasm", "lazy-function-tables"] }

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "thin"
